--- a/config/module.ini
+++ b/config/module.ini
@@ -1,4 +1,4 @@
-name = "Csv Import"
+name = "CSV Import"
 version = "0.1-alpha"
 configurable = false
 author = "Roy Rosenzweig Center for History & New Media"
