--- a/config/module.ini
+++ b/config/module.ini
@@ -4,4 +4,5 @@ configurable = false
 author = "Roy Rosenzweig Center for History & New Media"
 description = "Import content from a CSV file."
 ;module_link = ""
-;author_link = ""
+author_link = "http://rrchnm.org/"
+omeka_version_constraint = "^1.0.0-beta"
