Add support link to ini

--- a/config/module.ini
+++ b/config/module.ini
@@ -5,5 +5,6 @@ configurable = false
 author = "Roy Rosenzweig Center for History & New Media"
 description = "Import content from a CSV file."
 ;module_link = ""
+support_link = "https://forum.omeka.org/c/omeka-s/modules"
 author_link = "http://rrchnm.org/"
 omeka_version_constraint = "^1.0.0-beta"
