Set version 1.0.0-beta

--- a/config/module.ini
+++ b/config/module.ini
@@ -1,6 +1,6 @@
 [info]
 name = "CSV Import"
-version = "0.2.0-alpha"
+version = "1.0.0-beta"
 configurable = false
 author = "Roy Rosenzweig Center for History & New Media"
 description = "Import content from a CSV file."
