upgrade for new API

--- a/config/module.ini
+++ b/config/module.ini
@@ -7,4 +7,4 @@ description = "Import content from a CSV file."
 ;module_link = ""
 support_link = "https://forum.omeka.org/c/omeka-s/modules"
 author_link = "http://rrchnm.org/"
-omeka_version_constraint = "^1.0.0-beta"
+omeka_version_constraint = "^1.0.0-beta3"
