--- a/config/module.ini
+++ b/config/module.ini
@@ -1,7 +1,7 @@
 [info]
 name = "CSV Import"
-description = "Import and update content (items, item sets, media, users) from a CSV file."
-tags = "import, csv, bulk upload, bulk update"
+description = "Import and update content (items, item sets, media, users) from a CSV, a TSV or an ODS file."
+tags = "import, csv, spreadsheet, bulk upload, bulk update"
 license = "GNU/GPL v3"
 author = "Roy Rosenzweig Center for History & New Media and Daniel Berthereau"
 author_link = "http://rrchnm.org/"
