--- a/config/module.ini
+++ b/config/module.ini
@@ -2,11 +2,11 @@
 name = "CSV Import"
 description = "Import and update content (items, item sets, media, users) from a CSV, a TSV or an ODS file."
 tags = "import, csv, spreadsheet, bulk upload, bulk update"
-license = "GNU/GPL v3"
+license = "GPLv3"
 author = "Roy Rosenzweig Center for History & New Media and Daniel Berthereau"
 author_link = "http://rrchnm.org/"
-module_link = "https://github.com/omeka-s-modules/CSVImport"
+module_link = "http://omeka.org/docs/s/user-manual/modules/csvimport/"
 support_link = "https://forum.omeka.org/c/omeka-s/modules"
 configurable = false
-version = "1.1.1"
+version = "2.0.0"
 omeka_version_constraint = "^1.0.0"
