fix 404 error for module link

--- a/config/module.ini
+++ b/config/module.ini
@@ -5,7 +5,7 @@ tags = "import, csv, spreadsheet, bulk upload, bulk update"
 license = "GPLv3"
 author = "Roy Rosenzweig Center for History & New Media and Daniel Berthereau"
 author_link = "http://rrchnm.org/"
-module_link = "http://omeka.org/docs/s/user-manual/modules/csvimport/"
+module_link = "https://omeka.org/s/modules/CSVImport/"
 support_link = "https://forum.omeka.org/c/omeka-s/modules"
 configurable = false
 version = "2.0.0"
