--- a/config/module.ini
+++ b/config/module.ini
@@ -8,5 +8,5 @@ author_link = "http://rrchnm.org/"
 module_link = "https://omeka.org/s/docs/user-manual/modules/csvimport/"
 support_link = "https://forum.omeka.org/c/omeka-s/modules"
 configurable = false
-version = "2.0.0"
-omeka_version_constraint = "^1.0.0"
+version = "2.1.0"
+omeka_version_constraint = "^1.0.0 || ^2.0.0"
