--- a/config/module.ini
+++ b/config/module.ini
@@ -9,4 +9,4 @@ module_link = "https://omeka.org/s/docs/user-manual/modules/csvimport/"
 support_link = "https://forum.omeka.org/c/omeka-s/modules"
 configurable = false
 version = "2.1.0"
-omeka_version_constraint = "^1.0.0 || ^2.0.0"
+omeka_version_constraint = "^2.0.0"
