Update ini author

--- a/config/module.ini
+++ b/config/module.ini
@@ -3,8 +3,8 @@ name = "CSV Import"
 description = "Import and update content (items, item sets, media, users) from a CSV, a TSV or an ODS file."
 tags = "import, csv, spreadsheet, bulk upload, bulk update"
 license = "GPLv3"
-author = "Roy Rosenzweig Center for History & New Media and Daniel Berthereau"
-author_link = "http://rrchnm.org/"
+author = "Omeka Team and Daniel Berthereau"
+author_link = "http://omeka.org/"
 module_link = "https://omeka.org/s/docs/user-manual/modules/csvimport/"
 support_link = "https://forum.omeka.org/c/omeka-s/modules"
 configurable = false
