--- a/config/module.ini
+++ b/config/module.ini
@@ -4,7 +4,7 @@ description = "Import and update content (items, item sets, media, users) from a
 tags = "import, csv, spreadsheet, bulk upload, bulk update"
 license = "GPLv3"
 author = "Omeka Team and Daniel Berthereau"
-author_link = "http://omeka.org/"
+author_link = "https://omeka.org/"
 module_link = "https://omeka.org/s/docs/user-manual/modules/csvimport/"
 support_link = "https://forum.omeka.org/c/omeka-s/modules"
 configurable = false
